--- a/c++/move/Makefile
+++ b/c++/move/Makefile
@@ -1,7 +1,14 @@
 include ~/platform/platmk/plat.mk
-TARGET = lele_test_move
-OBJECTS =	lele_test_move.o
-$(TARGET) : $(OBJECTS)
+TARGET = lele_test_move lele_test_str_move
+OBJECTS =	lele_test_move.o lele_test_str_move.o
+all : $(TARGET)
+
+.PHONY : all
+
+lele_test_move : lele_test_move.o
+	$(CXX) $(CXXFLAGS) $< -o $@
+
+lele_test_str_move : lele_test_str_move.o
 	$(CXX) $(CXXFLAGS) $< -o $@
 
 $(OBJECTS) : %.o : %.cpp
