--- a/c++/class/Makefile
+++ b/c++/class/Makefile
@@ -1,11 +1,10 @@
-include /home/lele/platform/platmk/plat.mk
-all 	   : 	lele_test_class
-main 	   = 	lele_test_class
-objects    =  lele_test_class.o
-$(main)  :   lele_test_class.o 
-	$(CXX) $(CXXFLAGS) $< -o $@
-$(objects) : %.o : %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-.PHONY     :    clean
+include ~/make/plat.mak
+TARGET = lele_test_class
+OBJECTS =	$(TARGET).o
+$(TARGET) : $(OBJECTS)
+	$(CXX) $(CXXFLAGS) $< -o $@ $(PLATFORM_INCS) $(PLATFORM_LIBS) $(USE_SHARED_LIBS)
+$(OBJECTS) : %.o : %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@ $(PLATFORM_INCS)
+.PHONY : clean
 clean:
-	$(RM) $(objects) $(main)
+	$(RM) $(OBJECTS) $(TARGET)
