--- a/strchr/makefile
+++ b/strchr/makefile
@@ -1,10 +1,11 @@
-include ~/make/plat.mak
+CXX = g++
+CXXFLAGS = -std=c++11 -g -O0 -Wall -Wextra
 TARGET = lele_test_strchr
 OBJECTS =	lele_test_strchr.o
 $(TARGET) : $(OBJECTS)
-	$(CXX) $(CXXFLAGS) $< -o $@ $(PLATFORM_INCS) $(PLATFORM_LIBS) $(USE_SHARED_LIBS)
+	$(CXX) $(CXXFLAGS) $< -o $@
 $(OBJECTS) : %.o : %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@ $(PLATFORM_INCS)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 .PHONY : clean
 clean:
 	$(RM) $(OBJECTS) $(TARGET)
