--- a/c++/auto/Makefile
+++ b/c++/auto/Makefile
@@ -1,4 +1,5 @@
-include ~/platform/platmk/plat.mk
+CXX=g++
+CXXFLAGS=-std=c++17 -g -O0 -Wall
 all :	lele_test_auto
 lele_test_auto = lele_test_auto
 objects =	lele_test_auto.o
