--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:google/googletest.git
 [submodule "thirdparty/googletest"]
 	path = thirdparty/googletest
-	url = git@github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
