--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ compiler:
 
 script:
     - cd ./c-cpp/ && mkdir build
-    - cd build; make && make test
+    - cd build; cmake .. && make && make test
