--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ if (GOOGLETEST_FOUND)
     file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
     ADD_EXECUTABLE(GUnitTests ${SRC_FILES})
     target_link_libraries(GUnitTests gtest gtest_main)
+    set_property(TARGET GUnitTests PROPERTY CXX_STANDARD 17)
     add_test(NAME gunittests COMMAND GUnitTests)
 else(GOOGLETEST_FOUND)
     MESSAGE(STATUS "GOOGLETEST NOT FOUND, gtest will not run")
