gcc7 and clang5

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,28 @@ language: cpp
 matrix:
     include:
         - os: linux
+          addons:
+              apt:
+                  sources:
+                      - ubuntu-toolchain-r-test
+                  packages:
+                      - g++-7
           compiler: gcc
+          env:
+              - COMPILER="CC=gcc-7 && CXX=g++-7"
         - os: linux
+          addons:
+              apt:
+                  sources:
+                      - llvm-toolchain-trusty-5.0
+                  packages:
+                      - clang-5.0
           compiler: clang
+          env:
+              - COMPILER="CC=clang-5.0 && CXX=clang++-5.0"
+
+before_install:
+    - eval "${COMPILER}"
 
 script: ./ci/travis.sh
 
