--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,20 @@ matrix:
                   sources:
                       - ubuntu-toolchain-r-test
                   packages:
-                      - g++-7
+                      - g++-7.3
           compiler: gcc
           env:
-              - COMPILER="CC=gcc-7 && CXX=g++-7"
+              - COMPILER="CC=gcc-7.3 && CXX=g++-7.3"
         - os: linux
           addons:
               apt:
                   sources:
-                      - llvm-toolchain-trusty-5.0
+                      - llvm-toolchain-trusty
                   packages:
-                      - clang-5.0
+                      - clang-6.0
           compiler: clang
           env:
-              - COMPILER="CC=clang-5.0 && CXX=clang++-5.0"
+              - COMPILER="CC=clang-6.0 && CXX=clang++-6.0"
 
 before_install:
     - eval "${COMPILER}"
