--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ matrix:
               apt:
                   sources:
                       - ubuntu-toolchain-r-test
+                      - george-edison55-precise-backports
+                      - jonathonf
                   packages:
                       - g++-7.3
           compiler: gcc
@@ -17,6 +19,8 @@ matrix:
               apt:
                   sources:
                       - llvm-toolchain-trusty
+                      - george-edison55-precise-backports
+                      - jonathonf
                   packages:
                       - clang-6.0
           compiler: clang
