--- a/.travis.yml
+++ b/.travis.yml
@@ -8,25 +8,27 @@ matrix:
                   sources:
                       - ubuntu-toolchain-r-test
                       - george-edison55-precise-backports
+                  packages:
+                      - g++-7
           compiler: gcc
           env:
-              - COMPILER="CC=gcc-7.3 && CXX=g++-7.3"
+              - COMPILER="CC=gcc-7 && CXX=g++-7"
         - os: linux
           addons:
               apt:
                   sources:
-                      - llvm-toolchain-trusty
+                      - ubuntu-toolchain-r-test
                       - george-edison55-precise-backports
                       - llvm-toolchain-trusty-6.0
+                  packages:
+                      - g++-7
+                      - clang-6.0
           compiler: clang
           env:
               - COMPILER="CC=clang-6.0 && CXX=clang++-6.0"
 
 before_install:
-    - sudo add-apt-repository ppa:jonathonf/gcc -y
     - sudo apt-get update -q
-    - sudo apt-get insall g++7.3 -y
-    - sudo apt-get install clang6.0 -y
     - eval "${COMPILER}"
 
 script: ./ci/travis.sh
