--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
 
-# TODO 增加cmake的详细显示
-if(CPP_TEST_VERBOSE)
-    message(STATUS "CPP TEST Configuring...")
-endif()
-
 # CMake policies
 cmake_policy(SET CMP0022 NEW)
 
@@ -16,18 +11,15 @@ endif()
 project(cpptest C CXX)
 
 # Options
-#TODO 增加选择编译测试程序
 option(CPP_TEST_BUILD_TESTS "Build tests" ON)
+option(CPP_TEST_VERBOSE "Build on verbose mode" ON)
 
-#TODO 增加编译动态库的选项
-if (BUILD_SHARED_LIBS)
-    set(CPP_TEST_BUILD_SHARED_LIBS_DEFAULT ON)
-else (BUILD_SHARED_LIBS)
-    set(CPP_TEST_BUILD_SHARED_LIBS_DEFAULT OFF)
-endif (BUILD_SHARED_LIBS)
+if(CPP_TEST_VERBOSE)
+    message(STATUS "CPP TEST build print out verbose...")
+    set(CMAKE_VERBOSE_MAKEFILE ON)
+endif()
 
-set(CMAKE_VERBOSE_MAKEFILE ON)
-
-enable_testing()
-
-add_subdirectory(tests)
+if (CPP_TEST_BUILD_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif ()
