--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ if (GOOGLETEST_FOUND)
     include_directories(AFTER SYSTEM ${GTEST_INCLUDE_DIR})
     file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
     ADD_EXECUTABLE(GUnitTests ${SRC_FILES})
-    target_link_libraries(GUnitTests gtest gtest_main)
+    target_link_libraries(GUnitTests gtest gtest_main crypto)
     set_property(TARGET GUnitTests PROPERTY CXX_STANDARD 17)
     add_test(NAME gunittests COMMAND GUnitTests)
 else(GOOGLETEST_FOUND)
