--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,28 @@
 language: cpp
-
 matrix:
     include:
         - os: linux
+          dist: bionic
           addons:
               apt:
                   sources:
                       - ubuntu-toolchain-r-test
-                      - george-edison55-precise-backports
                   packages:
                       - g++-7
           compiler: gcc
           env:
               - COMPILER="CC=gcc-7 && CXX=g++-7"
         - os: linux
+          dist: bionic
           addons:
               apt:
                   sources:
-                      - ubuntu-toolchain-r-test
-                      - george-edison55-precise-backports
-                      - llvm-toolchain-trusty-6.0
+                      - llvm-toolchain-trusty-7
                   packages:
-                      - g++-7
-                      - clang-6.0
+                      - clang-7
           compiler: clang
           env:
-              - COMPILER="CC=clang-6.0 && CXX=clang++-6.0"
+              - COMPILER="CC=clang-7 && CXX=clang++-7"
 
 before_install:
     - eval "${COMPILER}"
