--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,3 +35,4 @@ cpp_add_test(TEST_NAME first_test SOURCE_FILE first_test.cpp)
 cpp_add_test(TEST_NAME second_test SOURCE_FILE second_test.cpp)
 cpp_add_test(TEST_NAME spdlog_test SOURCE_FILE spdlog_test.cpp)
 cpp_add_test(TEST_NAME bitset_test SOURCE_FILE bitset_test.cpp)
+cpp_add_test(TEST_NAME declval_test SOURCE_FILE declval_test.cpp)
