--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,3 +37,4 @@ cpp_add_test(TEST_NAME spdlog_test SOURCE_FILE spdlog_test.cpp)
 cpp_add_test(TEST_NAME bitset_test SOURCE_FILE bitset_test.cpp)
 cpp_add_test(TEST_NAME declval_test SOURCE_FILE declval_test.cpp)
 cpp_add_test(TEST_NAME random_test SOURCE_FILE random_test.cpp)
+cpp_add_test(TEST_NAME move_semantics_test SOURCE_FILE move_semantics_test.cpp)
