test: c++ object model test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -38,3 +38,4 @@ cpp_add_test(TEST_NAME bitset_test SOURCE_FILE bitset_test.cpp)
 cpp_add_test(TEST_NAME declval_test SOURCE_FILE declval_test.cpp)
 cpp_add_test(TEST_NAME random_test SOURCE_FILE random_test.cpp)
 cpp_add_test(TEST_NAME move_semantics_test SOURCE_FILE move_semantics_test.cpp)
+cpp_add_test(TEST_NAME object_model_test SOURCE_FILE object_model_test.cpp)
