cmake: add submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,12 @@ endif()
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-include(spdlog)
-
+include_directories(third_party/spdlog/include)
 if (BUILD_TEST)
     enable_testing()
     add_subdirectory(test)
+    add_subdirectory(third_party/googletest)
+    add_subdirectory(third_party/spdlog)
 endif()
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
