--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(main main.cpp)
 link_directories(${CMAKE_BINARY_DIR}/lib)
-target_link_libraries(main add)
+target_link_libraries(main add spdlog::spdlog_header_only)
