--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,8 +4,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 include(unittest)
 cpp_add_test(TEST_NAME template_arg_test SOURCE_FILE template_arg_test.cpp)
 cpp_add_test(TEST_NAME sqlite3_test SOURCE_FILE sqlite3_test.cpp)
-target_link_libraries(sqlite3_test sqlite3 dl)
+target_link_libraries(sqlite3_test sqlite3 dl sqlite3_header spdlog::spdlog_header_only)
 cpp_add_test(TEST_NAME spdlog_test SOURCE_FILE spdlog_test.cpp)
+target_link_libraries(spdlog_test spdlog::spdlog_header_only)
 cpp_add_test(TEST_NAME bitset_test SOURCE_FILE bitset_test.cpp)
 cpp_add_test(TEST_NAME declval_test SOURCE_FILE declval_test.cpp)
 cpp_add_test(TEST_NAME random_test SOURCE_FILE random_test.cpp)
