test: exception catch

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,3 +14,4 @@ cpp_add_test(TEST_NAME move_semantics_test SOURCE_FILE move_semantics_test.cpp)
 cpp_add_test(TEST_NAME object_model_test SOURCE_FILE object_model_test.cpp)
 cpp_add_test(TEST_NAME map_test SOURCE_FILE map_test.cpp)
 cpp_add_test(TEST_NAME forward_declare_test SOURCE_FILE forward_declare_test.cpp)
+cpp_add_test(TEST_NAME exception_test SOURCE_FILE exception_test.cpp)
