--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,3 +15,4 @@ cpp_add_test(TEST_NAME object_model_test SOURCE_FILE object_model_test.cpp)
 cpp_add_test(TEST_NAME map_test SOURCE_FILE map_test.cpp)
 cpp_add_test(TEST_NAME forward_declare_test SOURCE_FILE forward_declare_test.cpp)
 cpp_add_test(TEST_NAME exception_test SOURCE_FILE exception_test.cpp)
+add_subdirectory(crtp)
