--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,3 +16,5 @@ cpp_add_test(TEST_NAME map_test SOURCE_FILE map_test.cpp)
 cpp_add_test(TEST_NAME forward_declare_test SOURCE_FILE forward_declare_test.cpp)
 add_subdirectory(crtp)
 add_subdirectory(except)
+add_subdirectory(func_operator)
+add_subdirectory(chrono)
