test: constexpr test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(crtp)
 add_subdirectory(except)
 add_subdirectory(func_operator)
 add_subdirectory(chrono)
+add_subdirectory(constexpr)
