test: nanoseconds time

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(except)
 add_subdirectory(func_operator)
 add_subdirectory(chrono)
 add_subdirectory(constexpr)
+add_subdirectory(time)
