test: add c99 struct init test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory(func_operator)
 add_subdirectory(chrono)
 add_subdirectory(constexpr)
 add_subdirectory(time)
+add_subdirectory(base)
