test: add gtest statement test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,10 +14,11 @@ cpp_add_test(TEST_NAME move_semantics_test SOURCE_FILE move_semantics_test.cpp)
 cpp_add_test(TEST_NAME object_model_test SOURCE_FILE object_model_test.cpp)
 cpp_add_test(TEST_NAME map_test SOURCE_FILE map_test.cpp)
 cpp_add_test(TEST_NAME forward_declare_test SOURCE_FILE forward_declare_test.cpp)
+add_subdirectory(base)
+add_subdirectory(chrono)
+add_subdirectory(constexpr)
 add_subdirectory(crtp)
 add_subdirectory(except)
 add_subdirectory(func_operator)
-add_subdirectory(chrono)
-add_subdirectory(constexpr)
+add_subdirectory(gtest)
 add_subdirectory(time)
-add_subdirectory(base)
