--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,9 +10,7 @@ target_link_libraries(sqlite3_test sqlite3 dl sqlite3_header spdlog::spdlog_head
 cpp_add_test(TEST_NAME spdlog_test SOURCE_FILE spdlog_test.cpp)
 target_link_libraries(spdlog_test spdlog::spdlog_header_only)
 cpp_add_test(TEST_NAME bitset_test SOURCE_FILE bitset_test.cpp)
-if(COMPILER_SUPPORTS_CXX17)
-    cpp_add_test(TEST_NAME declval_test SOURCE_FILE declval_test.cpp CXX_STANDARD 17)
-endif()
+cpp_add_test(TEST_NAME declval_test SOURCE_FILE declval_test.cpp)
 cpp_add_test(TEST_NAME random_test SOURCE_FILE random_test.cpp)
 cpp_add_test(TEST_NAME move_semantics_test SOURCE_FILE move_semantics_test.cpp)
 cpp_add_test(TEST_NAME object_model_test SOURCE_FILE object_model_test.cpp)
