--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(except)
 add_subdirectory(func_operator)
 add_subdirectory(gtest)
 add_subdirectory(time)
+add_subdirectory(thread)
