test: add stl map emplace test
add stl map emplace test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,5 +23,6 @@ add_subdirectory(crtp)
 add_subdirectory(except)
 add_subdirectory(func_operator)
 add_subdirectory(gtest)
+add_subdirectory(stl)
 add_subdirectory(time)
 add_subdirectory(thread)
