--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ include(unittest)
 CHECK_CXX_COMPILER_FLAG("-std=c++17" COMPILER_SUPPORTS_CXX17)
 cpp_add_test(TEST_NAME template_arg_test SOURCE_FILE template_arg_test.cpp)
 cpp_add_test(TEST_NAME sqlite3_test SOURCE_FILE sqlite3_test.cpp)
-target_link_libraries(sqlite3_test sqlite3 dl sqlite3_header spdlog::spdlog_header_only)
+target_link_libraries(sqlite3_test sqlite3 sqlite3_header spdlog::spdlog_header_only)
 cpp_add_test(TEST_NAME spdlog_test SOURCE_FILE spdlog_test.cpp)
 target_link_libraries(spdlog_test spdlog::spdlog_header_only)
 cpp_add_test(TEST_NAME bitset_test SOURCE_FILE bitset_test.cpp)
